Adds Nova keypair tests
This submission adds three methods to
rally/benchmark/scenarios/nova/utils.py
1) def create_keypair
2) def list_keypairs
3) def delete_keypair
Adds new file test_keypairs.py for nova
keypair scenarios

Added configuration files for keypair operations under
samples/tasks/scenarios/nova
1) create-and-list-keypairs.json
2) create-and-list-keypairs.yaml
3) create-and-delete-keypair.json
4) create-and-delete-keypair.yaml
5) boot-and-delete-server-with-keypairs.json
6) boot-and-delete-server-with-keypairs.yaml

Added unittests to test_utils.py and test_keypairs.py under
tests/unit/benchmark/scenarios/nova

Change-Id: Ic90d94d3dc925a9f225f760bfc550bf3e82e80b8

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1271,3 +1271,55 @@
           nova:
             security_groups: -1
             security_group_rules: -1
+
+
+  NovaKeypair.create_and_delete_keypair:
+    -
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+
+  NovaKeypair.create_and_list_keypairs:
+    -
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+
+  NovaKeypair.boot_and_delete_server_with_keypair:
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network:
+          start_cidr: "10.2.0.0/24"
+      sla:
+        failure_rate:
+          max: 0
