Adds Designate server-list scenario
This submission adds method to
rally/benchmark/scenarios/designate/basic.py

1)def list_servers

Added configuration files for server operations under
samples/tasks/scenarios/designate

1) list-servers.json
2) list-servers.yaml
Also, added unittests to test_basic.py under
tests/unit/benchmark/scenarios/designate

Change-Id: I948f5e0c8beca963a9d6f1d388ea0410f2d107e3

--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -100,3 +100,18 @@
       sla:
         failure_rate:
           max: 0
+
+  DesignateBasic.list_servers:
+    -
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
