--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ requests>=2.2.0,!=2.4.0
 SQLAlchemy>=0.9.7,<=0.9.99
 sphinx>=1.1.2,!=1.2.0,!=1.3b1,<1.3
 six>=1.9.0
+
+# Python 2.6 related packages(see rally.common.costilius for more details)
+ordereddict
+simplejson>=2.2.0
