[Sahara] added a cluster delete timeout
Large clusters need some time to terminate correctly.
Config added for delete operation.

Also the create operation default timeout increased.

Change-Id: I025efe6630ea895f54288a183c4397b6223a814f

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -330,7 +330,10 @@
 #nova_server_migrate_poll_interval = 2.0
 
 # A timeout in seconds for a cluster create operation (integer value)
-#cluster_create_timeout = 600
+#cluster_create_timeout = 1800
+
+# A timeout in seconds for a cluster delete operation (integer value)
+#cluster_delete_timeout = 900
 
 # Cluster status polling interval in seconds (integer value)
 #cluster_check_interval = 5
