[Vm] Restore fixed IP support in boot_runcommand_delete
Changes:
    * restore argument `use_floating_ip' for scenario
      VMTasks.boot_runcommand_delete, which controls whether to use
      floating or fixed IP for SSH connection
    * fix for exceptions.ScriptError

Change-Id: I92820954079a62a7e619d136527f13008e5768f9
Closes-Bug: #1427313

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1314,6 +1314,7 @@
         image:
           name: {{image_name}}
         floating_network: "public"
+        use_floatingip: true
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
         interpreter: "/bin/sh"
         username: "cirros"
@@ -1337,8 +1338,6 @@
           name: {{image_name}}
         volume_args:
             size: 2
-        fixed_network: "private"
-        floating_network: "public"
         use_floatingip: true
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
         interpreter: "/bin/sh"
@@ -1361,7 +1360,6 @@
           name: "m1.tiny"
         image:
           name: {{image_name}}
-        fixed_network: "private"
         use_floatingip: false
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
         interpreter: "/bin/sh"
