Add keystone benchmark scenarios for roles
Add keystone assign_and_remove_role scenario.
  API covered roles.add_user_role, roles.remove_user_role

Add keystone create_and_delete_role scenario.
  API covered roles.create, roles.delete

Add keystone create_and_list_user_roles scenario.
  API covered roles.create, roles.list

Change-Id: Ib351c76774a63302e112ee45e6dcb93c85e3c3cc

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -46,6 +46,44 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.add_and_remove_user_role:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
+  KeystoneBasic.create_and_delete_role:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
+  KeystoneBasic.create_add_and_list_user_roles:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_and_list_users:
     -
       args:
