Add keystone create_and_delete_service scenario
API covered services.create, services.delete

Add unit test for _list_services

Change-Id: I70be4d8a293ec9700a0c39aa07b1582789f155d3

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -98,6 +98,16 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_and_delete_service:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
   CeilometerAlarms.create_alarm:
     -
       args:
@@ -1453,9 +1463,9 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+          name: "m1.tiny"
         image:
-            name: {{image_name}}
+          name: {{image_name}}
       runner:
         type: "constant"
         times: 3
