Add keystone get_entities scenario
API covered tenants.get, users.get, roles.get, services.get

Change-Id: I5cda3b91e22a818b0b9b5f75257144b0fa8c055f

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -36,6 +36,16 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.get_entities:
+    -
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_and_list_users:
     -
       args:
