--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -86,6 +86,18 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_update_and_delete_tenant:
+    -
+      args:
+        name_length: 10
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_delete_user:
     -
       args:
