Add EC2 api scenario that list all servers
Change-Id: I1259f22868d13016971eb0b758a1052de213cf6d

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -35,6 +35,26 @@
         failure_rate:
           max: 0
 
+  EC2Servers.list_servers:
+    -
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+        ec2_servers:
+          flavor:
+            name: "m1.tiny"
+          image:
+            name: {{image_name}}
+          servers_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   Quotas.nova_update_and_delete:
     -
       args:
