Fix validation for rps parameter
The rpc parameter range was extended from >1 to >0.

Closes-Bug: #1439713
Closes-Bug: #1451786
Change-Id: I1b5818eaa8f6b5acb963c679e6d3dbaac067e625

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -364,6 +364,28 @@
 
     -
       args:
+        sleep: 0.1
+      runner:
+        type: "rps"
+        times: 5
+        rps: 0.5
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 0.1
+      runner:
+        type: "rps"
+        times: 5
+        rps: 0.2
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
         sleep: 0.001
       runner:
         type: "rps"
