--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1106,6 +1106,25 @@
         failure_rate:
           max: 0
 
+  NovaServers.pause_and_unpause_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.list_servers:
     -
       args:
