Add to constant and rps runneres limits for maximun Core usage
Introduces new parameter max_cpu_usage which can be used to avoid
possible 100% usage of all available CPU cores by reducing number
of CPU cores available for processes started by runner.

Closes-bug: 1430461
Change-Id: Ic8c729cd0c51a0a4a19619d0c936e23ab858ca2a

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -232,6 +232,18 @@
 
     -
       args:
+        sleep: 0.25
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 5
+        max_cpu_count: 3
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
         sleep: 0.1
       runner:
         type: "constant_for_duration"
@@ -260,6 +272,7 @@
         times: 200
         rps: 20
         max_concurrency: 10
+        max_cpu_count: 3
       sla:
         failure_rate:
           max: 0
