Add keystone create_and_list_services scenario
This scenario covers create keystone service and then list all services

Change-Id: I4e8cff9dfb6c522abd7d136f6e37b442ee44a4d9

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -108,6 +108,16 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_and_list_services:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
   CeilometerAlarms.create_alarm:
     -
       args:
