Keystone: Add scenarios to benchmark user disable/enable
Adds a new scenario to create a user and toggle the enabled flag.

Change-Id: I0b8d8e57c95cced72b6615f8120ec41879c414be

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -23,6 +23,28 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_user_set_enabled_and_delete:
+    -
+      args:
+        enabled: true
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        enabled: false
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_and_list_tenants:
     -
       args:
