Make coverage job voting
Instead of asking people to write unit tests let's just make
coverage job voting.

This can be implemented in very simple maner:

1) checkout to master
2) run coverage and get base line
3) checkout back
4) run coverage to get current coverage
5) If coverage was reduced more then 0.01% mark job as failed

Change-Id: Ib6bc4dbb11c69b107e6fcd6464a4041337ea1a66

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,8 @@ sitepackages = True
 commands = {toxinidir}/tests/ci/rally-integrated.sh
 
 [testenv:cover]
-commands = python setup.py testr --coverage --testr-args='{posargs}'
+commands = {toxinidir}/tests/ci/cover.sh {posargs}
+
 
 [testenv:docs]
 changedir = doc/source
