Add Nova lock and unlock scenario
Add scenario to boot a server, lock it, unlock it, and delete
it.

Change-Id: Ifd29211914ff264738e1ff0371629d33b5f55f36

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1278,6 +1278,25 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_lock_unlock_and_delete:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.boot_server_from_volume_and_delete:
     -
       args:
