--- a/rally-jobs/rally-mistral.yaml
+++ b/rally-jobs/rally-mistral.yaml
@@ -16,7 +16,7 @@
   MistralWorkbooks.create_workbook:
     -
       args:
-        definition: "/home/jenkins/.rally/extra/mistral_wb.yaml"
+        definition: "~/.rally/extra/mistral_wb.yaml"
       runner:
         type: "constant"
         times: 50
@@ -31,7 +31,7 @@
 
     -
       args:
-        definition: "/home/jenkins/.rally/extra/mistral_wb.yaml"
+        definition: "~/.rally/extra/mistral_wb.yaml"
         do_delete: true
       runner:
         type: "constant"
