[Sahara] Fix the config descriptions
The config descriptions for EDP benchmark configs were simply wrong.

Change-Id: I5281f467e18b586de47ce223e4ff2b04e8ece5a1

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -419,10 +419,10 @@
 # Cluster status polling interval in seconds (integer value)
 #cluster_check_interval = 5
 
-# A timeout in seconds for a cluster create operation (integer value)
+# A timeout in seconds for a Job Execution to complete (integer value)
 #job_execution_timeout = 600
 
-# Cluster status polling interval in seconds (integer value)
+# Job Execution status polling interval in seconds (integer value)
 #job_check_interval = 5
 
 # Time to sleep after boot before polling for status (floating point
