--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1164,6 +1164,26 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_and_associate_floating_ip:
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+        network: {}
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.list_servers:
     -
       args:
