[Sahara] Split EDP context
The Data Sources and Job Binaries contexts are now separated.
Now there is no need to set the Data Source when they are not required or
not supported by the Job type.

Implements-bp: split-sahara-edp
Change-Id: I64dd55138d89c5fefcc2b2c120906873153413f0

--- a/samples/tasks/scenarios/sahara/jobs/pig_script_job.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/pig_script_job.yaml
@@ -17,11 +17,7 @@
           username: "ubuntu"
           plugin_name: "vanilla"
           hadoop_version: "1.2.1"
-        sahara_edp:
-          input_type: "hdfs"
-          output_type: "hdfs"
-          input_url: "/"
-          output_url_prefix: "/out_"
+        sahara_job_binaries:
           mains:
             -
               name: "example.pig"
@@ -30,6 +26,11 @@
             -
               name: "udf.jar"
               download_url: "https://github.com/openstack/sahara/blob/master/etc/edp-examples/pig-job/udf.jar?raw=true"
+        sahara_data_sources:
+          input_type: "hdfs"
+          output_type: "hdfs"
+          input_url: "/"
+          output_url_prefix: "/out_"
         sahara_cluster:
           flavor_id: "2"
           workers_count: 3
