--- a/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
@@ -22,11 +22,7 @@
           username: "ubuntu"
           plugin_name: "vanilla"
           hadoop_version: "1.2.1"
-        sahara_edp:
-          input_type: "hdfs"
-          output_type: "hdfs"
-          input_url: "/"
-          output_url_prefix: "/out_"
+        sahara_job_binaries:
           libs:
             -
               name: "examples.jar"
