[Sahara] Split Data Sources context
The Input Data Sources and Output Data Sources contexts are now separated.
The Input and Output Data Sources may be configured differently now.

Change-Id: Iedd4a450f6cc761f918e5590bda2b57ad799e8aa

--- a/samples/tasks/scenarios/sahara/jobs/pig_script_job.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/pig_script_job.yaml
@@ -26,10 +26,11 @@
             -
               name: "udf.jar"
               download_url: "https://github.com/openstack/sahara/blob/master/etc/edp-examples/pig-job/udf.jar?raw=true"
-        sahara_data_sources:
+        sahara_input_data_sources:
           input_type: "hdfs"
-          output_type: "hdfs"
           input_url: "/"
+        sahara_output_data_sources:
+          output_type: "hdfs"
           output_url_prefix: "/out_"
         sahara_cluster:
           flavor_id: "2"
