--- a/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
@@ -15,3 +15,18 @@
         users:
           tenants: 2
           users_per_tenant: 2
+    -
+      args:
+        size:
+          min: 1
+          max: 5
+        flavor:
+            name: "m1.nano"
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
