--- a/samples/tasks/scenarios/cinder/create-and-list-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-list-volume.yaml
@@ -12,3 +12,17 @@
         users:
           tenants: 1
           users_per_tenant: 1
+    -
+      args:
+        size:
+          min: 1
+          max: 5
+        detailed: True
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
